--- a/content/publication/ordinal_embeddings_insights/cite.bib
+++ b/content/publication/ordinal_embeddings_insights/cite.bib
@@ -1,7 +1,7 @@
 @misc{vankadara2019large,
-    title={Large scale ordinal embedding: training neural networks with structure-free inputs},
-    author={Leena Chennuru Vankadara and Siavash Haghiri and Faiz Ul Wahab and Ulrike von Luxburg},
-    year={2019},
+    title={Insights into Ordinal Embedding Algorithms: A Systematic Evaluation},
+    author={Leena Chennuru Vankadara and Siavash Haghiri and Faiz Ul Wahab and Michael Lohaus and Ulrike von Luxburg},
+    year={2020},
     eprint={1912.01666},
     archivePrefix={arXiv},
     primaryClass={cs.LG}
